--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <article class="brief-history">
                 <h3 class="list-title">A Brief History</h3>
                 <p>Of the Curriculum</p>
-                <ul class="list">
+                <ul class="lists">
                     <li>
                         <h4 class="list-subtitle">V1 - 2014</h4>
                         <p>We launched freeCodeCamp with a simple list of 15 resources, including Harvard's CS50 and Stanford's Database Class.</p>
